--- a/public/style.css
+++ b/public/style.css
@@ -67,8 +67,9 @@ html{
 
 /* SECTION START */
 .start {
-    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),
-    url(img/fondo.jpg);
+    display: flex;
+    justify-content: center;
+    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1));
     background-size: cover;
     height: 100vh;
     color: #fff;
@@ -76,8 +77,10 @@ html{
     align-items: center;
 }
 .start .banner-content {
+    position: absolute;
     padding: 20px;
     background-color: #1e2326;
+    opacity: 0.8;
     max-width: 350px;
     margin: auto;
     text-align: center;
@@ -118,7 +121,67 @@ html{
 .start .banner-content .social a:hover {
     background-color: #1CB698;
 }
-.about-me {
+
+  canvas {
+    display: block;
+    
+  }
+  
+  /* ---- particles.js container ---- */
+  
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+  
+  /* ---- stats.js ---- */
+  
+  .count-particles{
+    background: #000022;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+  }
+  
+  .js-count-particles{
+    font-size: 1.1em;
+  }
+  
+  #stats,
+  .count-particles{
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  #stats{
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
+  }
+  
+  .count-particles{
+    border-radius: 0 0 3px 3px;
+  }
+
+
+/* SECTION ABOUT */
+
+
+  .about-me {
     background-color: #1e2326;
     color: #fff;
     padding: 50px 20px;
@@ -138,7 +201,7 @@ html{
     line-height: 22px;
     margin-bottom: 20px;
 }
-.about-me .section-content p span {
+.text-animation {
     color: #1CB698;
     font-weight: bold;
 }
@@ -222,6 +285,7 @@ html{
 a {
     text-decoration: none; 
   }
+
   
 /* SECTION S K I L L S */
 .skills {
