--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Work+Sans:wght@100;300;400;600;800&display=swap');
 
+html, body {
+    overflow-x: hidden; 
+    width: 100%; 
+    margin: 0; 
+    padding: 0; 
+}
+
 * {
     box-sizing: border-box;
     font-family: 'Work Sans';
@@ -11,6 +18,9 @@ html {
     scroll-behavior: smooth;
 }
 
+body{
+    background-color: black;
+}
 
 .header-container {
     background: #1e2326;
@@ -70,7 +80,7 @@ html {
 .start {
     display: flex;
     justify-content: center;
-    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1));
+    background: black;
     background-size: cover;
     height: 100vh;
     color: #fff;
@@ -404,36 +414,12 @@ a {
 }
 
 /* SECTION PORTFOLIO */
-.swiper {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-    height: 300px;
-}
-
-.swiper-slide img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.portfolio {
-    background-color: #252A2E;
+.portfolio{
+    max-height: 80%;
+    background: black;
+    padding-top: 100px;  
+    padding-bottom: 100px; 
     color: #fff;
-    padding: 50px 20px;
-    margin-bottom: 200px;
-}
-
-.portfolio .section-content {
-    max-width: 1100px;
-    margin: auto;
 }
 
 .portfolio h2 {
@@ -442,6 +428,117 @@ a {
     text-align: center;
     padding: 20px 0;
 }
+.swiper-container * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+}
+.swiper-container { 
+    box-sizing: border-box;
+    width: 100%;
+    height: 400px;
+    transition: opacity .6s ease;
+}
+.swiper-container.swiper-container-coverflow {
+    padding: 2% 0 calc(2% + 30px) 0;
+}
+.swiper-container:hover .swiper-button-prev,
+.swiper-container:hover .swiper-button-next {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+}
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+}
+.swiper-slide .swiper-content {
+    position: absolute;
+    bottom: 4%;
+    left: 2%;
+    max-width: 70%;
+    padding: 10px 16px;
+    color: #fff;
+    font-family: Verdana, sans-serif;   
+    background: rgba(0,0,0,0.6);
+}
+.swiper-slide .swiper-content .swiper-title {
+    font-size: 30px;
+    margin-bottom: 10px;
+    font-family: 'Roboto', sans-serif;  
+}
+.swiper-slide .swiper-content .swiper-caption {
+    display: block;
+    font-size: 15px;
+    line-height: 1.4;
+}
+[class^="swiper-button-"] {
+    width: 44px;
+    opacity: 0;
+    visibility: hidden;
+}
+.swiper-button-prev {
+    transform: translateX(50px);
+}
+.swiper-button-next {
+    transform: translateX(-50px);
+}
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 10px;
+    bottom: 10px;
+    position: relative;
+    width: 12px;
+    height: 12px;
+    background-color: #337AB7;
+    opacity: .5;
+    transition: all .3s ease; 
+}
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 18px;
+    height: 18px;
+    transform: translate(-50%, -50%);
+    border: 1px solid #337AB7;
+    border-radius: 50%;
+}
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet:hover, 
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    opacity: 1;
+}
+@media (max-width: 767px) {
+    .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+        bottom: 4px;
+    }
+    .swiper-slide .swiper-content .swiper-title {
+        font-size: 22px;
+    }
+    .swiper-slide .swiper-content .swiper-caption {
+        font-size: 13px;
+    }
+}
+
+.visit-website {
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    color: #000; /* Change this to your preferred color */
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    background-color: #f1c40f; /* Change this to your preferred background color */
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .visit-website:hover {
+    background-color: #e1b30d; /* Change this to your preferred hover color */
+  }
+  
+  .visit-website i {
+    margin-right: 10px;
+  }
 
 /* SECTION CONTACT */
 .contact {
@@ -449,6 +546,7 @@ a {
     background-color: #1e2326;
     color: #fff;
     padding: 50px 0;
+    margin-top: 100px;
 }
 
 .contact .section-content {
@@ -833,3 +931,4 @@ footer .up {
 
    
 }
+
